--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
+    <script type="module" crossorigin src="https://marcoramcharan.github.io/reactdeploy/assets/index.cacf9619.js"></script>
+    <link rel="stylesheet" href="https://marcoramcharan.github.io/reactdeploy/assets/index.3dd79a12.css">
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    
   </body>
 </html>
